# Context-Aware-Analytics-Agent

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
apps/backend/: Dockerfile  ca3_local.db  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/backend/fastapi/: main.py  test_main.py
apps/backend/migrations-postgres/: 0000_user_auth_and_chat_tables.sql  0001_message_feedback.sql  0002_chat_message_stop_reason_and_error_message.sql  0003_handle_slack_with_thread.sql  0004_input_and_output_tokens.sql  0005_add_project_tables.sql  0006_llm_model_ids.sql  0007_chat_message_llm_info.sql  0008_user_password_reset.sql  0009_organization_level.sql  0010_saved_prompts.sql  0011_add-experimental-agent.sql  0012_chat_message_metadata_and_tool_raw_input.sql  0013_agent_memory.sql  0014_add_enabledMcpTools_and_knownMcpServers_to_project.sql  0015_user_memory_enabled.sql  0016_chat_message_superseded_at.sql  0017_llm_inference_memory_superseded_by.sql  0018_added_message_part_chart_image.sql  0019_add_stories.sql  0020_bedrock_fields.sql  0021_add_source_chat_message.sql  0022_add_slack_provider.sql  0023_added_microsoft_teams.sql  (+14 more)
apps/frontend/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
cli/: Dockerfile  LICENSE  Makefile  README.md  build.py  pyproject.toml
cli/ca3_core/: __init__.py  auth.py  deps.py  main.py  mode.py  tracking.py  ui.py  version.py
cli/ca3_core/commands/: __init__.py  chat.py  debug.py  deploy.py  docs.py  init.py  upgrade.py
cli/ca3_core/commands/sync/: __init__.py  cleanup.py
cli/ca3_core/commands/sync/providers/: __init__.py  base.py
cli/ca3_core/commands/sync/providers/databases/: __init__.py  context.py  provider.py  query_history.py
cli/ca3_core/commands/test/: __init__.py  case.py  client.py  runner.py  server.py
cli/ca3_core/config/: __init__.py  base.py  error_handler.py  exceptions.py
cli/ca3_core/config/databases/: __init__.py  athena.py  base.py  bigquery.py  clickhouse.py  context.py  databricks.py  duckdb.py  fabric.py  mssql.py  mysql.py  postgres.py  redshift.py  snowflake.py  trino.py
cli/ca3_core/config/llm/: __init__.py
cli/ca3_core/context/: __init__.py  base.py  git.py  local.py
cli/ca3_core/templates/: __init__.py  context.py  engine.py  render.py
cli/ca3_core/templates/defaults/databases/: ai_summary.md.j2  columns.md.j2  description.md.j2  how_to_use.md.j2  preview.md.j2  profiling.md.j2
cli/redlake-ca3/: .ca3ignore
cli/redlake-ca3/tests/: bigquery_suite.yml
cli/tests/: conftest.py
cli/tests/ca3_core/: test_ui.py
cli/tests/ca3_core/commands/: conftest.py  test_chat.py  test_debug.py  test_init.py  test_runner.py
cli/tests/ca3_core/commands/sync/: __init__.py  test_cleanup.py  test_context.py  test_context_profiling_query.py  test_database_provider.py  test_provider_error_logging.py  test_providers.py  test_query_history.py  test_repository_provider.py  test_sync.py
cli/tests/ca3_core/commands/sync/integration/: base.py  conftest.py  test_athena.py  test_bigquery.py  test_clickhouse.py  test_databricks.py  test_duckdb.py  test_mssql.py  test_mysql.py  test_postgres.py  test_redshift.py  test_snowflake.py  test_trino.py
cli/tests/ca3_core/commands/sync/integration/dml/: athena.sql  bigquery.sql  clickhouse.sql  databricks.sql  mssql.sql  mysql.sql  postgres.sql  redshift.sql  snowflake.sql  trino.sql
cli/tests/ca3_core/config/: test_base.py  test_bigquery_context.py  test_fabric.py  test_llm.py
cli/tests/ca3_core/templates/: __init__.py  test_engine.py  test_render.py
(+167 files in other folders)
